--- a/.github/ISSUE_TEMPLATE/bug_request.yml
+++ b/.github/ISSUE_TEMPLATE/bug_request.yml
@@ -4,6 +4,7 @@ body:
   - type: textarea
     id: graph
     attributes: 
+      label: Resources 
       value: |
         **Related Issues**:
         **Related PRs**:
