--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Issue Template Identifiers
+    url: https://github.com/chelgeson1click/Github_Test/blob/main/.github/ISSUE_TEMPLATE/related.md
+    about: A list of reserved issue template keywords that modify your issue on creation.
   - name: Help and Support
     url: https://1clicklogistics.atlassian.net/wiki/spaces/KB/overview?homepageId=98526
     about: Please refer to our Confluence page for additional assistance.
