--- a/.github/ISSUE_TEMPLATE/bug_request.yml
+++ b/.github/ISSUE_TEMPLATE/bug_request.yml
@@ -1,7 +1,6 @@
 name: Bug Report
 description: File a reproducible bug or regression.
-labels: ['bug']
-title: "[Bug Report]"
+labels: ['Bug']
 body:
   - type: textarea
     id: graph
