--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -5,6 +5,7 @@ body:
   - type: textarea
     id: graph
     attributes: 
+      label: Resources
       value: |
         **Related Issues**:
         **Related PRs**: 
