--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "@graphql-eslint/eslint-plugin": "^3.20.1",
     "dotenv": "^16.4.5",
-    "graphql-config": "^5.1.3"
+    "graphql-config": "^5.1.3",
+    "eslint": "^8.57.1"
   }
 }
