--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -19,6 +19,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PROJECT_PAT_TOKEN }}
         run: |
           gh api graphql -f query="$(cat ./.github/schema/getProjectInfo.graphql)" > project_data.json
+          cat project_data.json
           echo 'PROJECT_ID='$(jq '.data.user.projectV2.id' project_data.json) >> $GITHUB_ENV
           echo 'DATE_FIELD_ID='$(jq '.data.user.projectV2.fields.nodes[] | select(.name== "Date posted") | .id' project_data.json) >> $GITHUB_ENV
           echo 'STATUS_FIELD_ID='$(jq '.data.user.projectV2.fields.nodes[] | select(.name== "Status") | .id' project_data.json) >> $GITHUB_ENV
