--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -25,7 +25,8 @@ jobs:
             gh api graphql -f query="$(cat ./.github/schema/${graphqlFileName}.graphql)" > ${queryOutput}
           }
 
-          run_graphql_query 'getProjectInfo' 'project_data.json'
+          bash ./.github/scripts/runGraphQLQuery.sh 'getProjectInfo' 'project_data.json'
+          # run_graphql_query 'getProjectInfo' 'project_data.json'
           # gh api graphql -f query="$(cat ./.github/schema/getProjectInfo.graphql)" > project_data.json
           cat project_data.json
 
