--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -42,7 +42,7 @@ jobs:
           ITEM_ID: ${{ github.event.issue.node_id }}
         run: |
           gh api graphql -f query='
-            mutation($project:ID!, $pr:ID!) {
+            mutation($project:ID!, $item:ID!) {
               addProjectV2ItemById(input: {projectId: $project, contentId: $item}) {
                 item {
                   id
