--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -49,6 +49,8 @@ jobs:
                 }
               }
             }' -f project=$PROJECT_ID -f item=$ITEM_ID
+          
+          testQueryFunc
 
 
 
