--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -50,7 +50,7 @@ jobs:
               }
             }' -f project=$PROJECT_ID -f item=$ITEM_ID
           
-          testQueryFunc
+          testQueryFunc 'getProjectInfo' 'test_data.json'
 
 
 
