--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -57,7 +57,7 @@ jobs:
               }
             }' -f project=$PROJECT_ID -f item=$ITEM_ID
           
-          testQueryFunc 'getProjectInfo'
+          runGraphQLMutation 'addIssueToProject'
 
 
 
