--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -35,7 +35,7 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: "### Please select a date:"
+      value: "### Feature Due Date:"
   - type: dropdown
     id: month
     attributes:
