--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -39,6 +39,7 @@ body:
   - type: dropdown
     id: month
     attributes:
+      label: "Month"
       description: "Select the month"
       options:
         - January
@@ -58,6 +59,7 @@ body:
   - type: dropdown
     id: day
     attributes:
+      label: "Day"
       description: "Select the day"
       options:
         - "1"
@@ -96,6 +98,7 @@ body:
   - type: dropdown
     id: year
     attributes:
+      label: "Year"
       description: "Select the year"
       options:
         - "2023"
