--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Extract Issue Due Date
         run: |
           ISSUE_BODY="${{github.event.issue.body}}"
-          MONTH=$(echo "$ISSUE_BODY" | grep -oP -e '(?<=Month\s*\n*)(\w*)(?=\s*\n*\#)')
-          DAY=$(echo "$ISSUE_BODY" | grep -oP -e '(?<=Day\s*\n*)(\w*)(?=\s*\n*\#)')
-          YEAR=$(echo "$ISSUE_BODY" | grep -oP -e '(?<=Year\s*\n*)(\w*)(?=\s*\n*\#)')
+          MONTH=$(echo "$ISSUE_BODY" | grep -oP -e '(?<=Month\n\n)(\w*)(?=\n\n\#)' || date +%B)
+          DAY=$(echo "$ISSUE_BODY" | grep -oP -e '(?<=Day\n\n)(\w*)(?=\n\n\#)' || date +%d)
+          YEAR=$(echo "$ISSUE_BODY" | grep -oP -e '(?<=Year\n\n)(\w*)(?=\n\n\#)' || date +%Y)
 
           echo $MONTH
 
