--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -30,12 +30,11 @@ jobs:
           runGraphQLQuery 'getProjectInfo' 'project_data.json'
           cat project_data.json
           
-          echo 'PROJECT_ID='$(jq '.data.user.projectV2.id' project_data.json) >> $GITHUB_ENV
+          getProjectID
           getProjectVariableID 'STATUS_FIELD_ID' 'Status'
           getProjectFieldOptionID 'STATUS_VALUE' 'Status' 'Assigned & Pending'
           getProjectVariableID 'ASSIGNMENT_DATE_ID' 'Assigned Date'
           echo "DATE=$(date +"%Y-%m-%d")" >> $GITHUB_ENV
-          echo "STATUS='Assigned and Pending'" >> $GITHUB_ENV
           
       - name: Validate project variables.
         run: |
