--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,14 +1,17 @@
 name: Feature Request
 description: Suggest an idea for the project.
-labels: ['Feature']
+labels: ['feature']
 body:
   - type: textarea
     id: graph
     attributes: 
       label: Resources
       value: |
+        Modify the fields below to represent the relevant items or resources affected by your PR:
         **Related Issues**:
         **Related PRs**: 
+        **Pages**: 
+        **Database Tables**:
   - type: textarea
     id: description
     attributes:
@@ -33,79 +36,6 @@ body:
       placeholder: A clear and concise description of any alternative solutions or features you've considered.
     validations:
       required: true
-  - type: markdown
-    attributes:
-      value: "### Feature Due Date:"
-  - type: dropdown
-    id: month
-    attributes:
-      label: "Month"
-      description: "Select the month"
-      options:
-        - January
-        - February
-        - March
-        - April
-        - May
-        - June
-        - July
-        - August
-        - September
-        - October
-        - November
-        - December
-    validations:
-      required: true
-  - type: dropdown
-    id: day
-    attributes:
-      label: "Day"
-      description: "Select the day"
-      options:
-        - "1"
-        - "2"
-        - "3"
-        - "4"
-        - "5"
-        - "6"
-        - "7"
-        - "8"
-        - "9"
-        - "10"
-        - "11"
-        - "12"
-        - "13"
-        - "14"
-        - "15"
-        - "16"
-        - "17"
-        - "18"
-        - "19"
-        - "20"
-        - "21"
-        - "22"
-        - "23"
-        - "24"
-        - "25"
-        - "26"
-        - "27"
-        - "28"
-        - "29"
-        - "30"
-        - "31"
-    validations:
-      required: true
-  - type: dropdown
-    id: year
-    attributes:
-      label: "Year"
-      description: "Select the year"
-      options:
-        - "2023"
-        - "2024"
-        - "2025"
-    validations:
-      required: true
   - type: textarea
     id: additional
     attributes:
@@ -113,3 +43,37 @@ body:
       description: Add any other context about the feature request here.
     validations:
       required: false
+      - type: dropdown
+    id: priority
+    attributes:
+      label: Priority
+      multiple: false
+      options: 
+        - 🌋 Urgent
+        - 🏔 High
+        - 🏕 Medium
+        - 🏝 Low
+  - type: dropdown
+    id: size
+    attributes:
+      label: Size
+      multiple: false
+      options: 
+        - 🐋 X-Large
+        - 🦑 Large
+        - 🐂 Medium
+        - 🐇 Small
+        - 🦔 Tiny
+  - type: dropdown
+    id: department
+    attributes:
+      label: Department
+      multiple: false
+      options:
+        - IT 
+        - HR
+        - Finance
+        - Operations
+        - Warehouse
+        - Management
+        - Customer
