--- a/.github/workflows/get_project_info.yml
+++ b/.github/workflows/get_project_info.yml
@@ -12,6 +12,13 @@ jobs:
         uses: actions/checkout@v4
         with: 
           sparse-checkout: .github
+
+      - name: Access Issue Body as JSON
+        uses: stefanbuck/github-issue-parser@v3
+        id: issue-parser
+
+      - run: cat ${HOME}/issue-parser-result.json
+
       - name: Setup Global Variables
         env:
           SCRIPT_PATH: './.github/scripts'
